# NEXTInIO

./: README.md  pyproject.toml
nextinio/: __init__.py  h5.py  vtkdata.py
